// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsRow Component Snapshots matches snapshot with various counts 1`] = `
<RCTView
  ref={null}
  style={
    {
      "alignItems": "center",
      "borderTopColor": "#E5E5E5",
      "borderTopWidth": 1,
      "flexDirection": "row",
      "paddingVertical": 16,
      "width": "100%",
    }
  }
>
  <RCTTouchableOpacity
    accessibilityLabel="15 Moments. Tap to view"
    accessibilityRole="button"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    aria-label="15 Moments. Tap to view"
    onPress={[MockFunction]}
    ref={null}
    role="button"
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <RCTText
      ref={null}
      style={
        {
          "color": "#1A1A1A",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 2,
        }
      }
      testID="RCTText"
    >
      15
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#666666",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Moments
    </RCTText>
  </RCTTouchableOpacity>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "#E5E5E5",
        "height": 32,
        "width": 1,
      }
    }
  />
  <RCTTouchableOpacity
    accessibilityLabel="42 Exchanges. Tap to view"
    accessibilityRole="button"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    aria-label="42 Exchanges. Tap to view"
    onPress={[MockFunction]}
    ref={null}
    role="button"
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <RCTText
      ref={null}
      style={
        {
          "color": "#1A1A1A",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 2,
        }
      }
      testID="RCTText"
    >
      42
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#666666",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Exchanges
    </RCTText>
  </RCTTouchableOpacity>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "#E5E5E5",
        "height": 32,
        "width": 1,
      }
    }
  />
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <RCTText
      ref={null}
      style={
        {
          "color": "#1A1A1A",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 2,
        }
      }
      testID="RCTText"
    >
      0.88
      %
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#666666",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Response
    </RCTText>
  </RCTView>
</RCTView>
`;

exports[`StatsRow Component Snapshots matches snapshot with zero values 1`] = `
<RCTView
  ref={null}
  style={
    {
      "alignItems": "center",
      "borderTopColor": "#E5E5E5",
      "borderTopWidth": 1,
      "flexDirection": "row",
      "paddingVertical": 16,
      "width": "100%",
    }
  }
>
  <RCTTouchableOpacity
    accessibilityLabel="0 Moments. Tap to view"
    accessibilityRole="button"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    aria-label="0 Moments. Tap to view"
    onPress={[MockFunction]}
    ref={null}
    role="button"
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <RCTText
      ref={null}
      style={
        {
          "color": "#1A1A1A",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 2,
        }
      }
      testID="RCTText"
    >
      0
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#666666",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Moments
    </RCTText>
  </RCTTouchableOpacity>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "#E5E5E5",
        "height": 32,
        "width": 1,
      }
    }
  />
  <RCTTouchableOpacity
    accessibilityLabel="0 Exchanges. Tap to view"
    accessibilityRole="button"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    aria-label="0 Exchanges. Tap to view"
    onPress={[MockFunction]}
    ref={null}
    role="button"
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <RCTText
      ref={null}
      style={
        {
          "color": "#1A1A1A",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 2,
        }
      }
      testID="RCTText"
    >
      0
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#666666",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Exchanges
    </RCTText>
  </RCTTouchableOpacity>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "#E5E5E5",
        "height": 32,
        "width": 1,
      }
    }
  />
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <RCTText
      ref={null}
      style={
        {
          "color": "#1A1A1A",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 2,
        }
      }
      testID="RCTText"
    >
      0
      %
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#666666",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Response
    </RCTText>
  </RCTView>
</RCTView>
`;
